# chess

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: DefaultCompilerWarnings.cmake
src/: CMakeLists.txt  main.cpp
src/ai/: receive_ai_command.cpp  receive_ai_command.hpp
src/app/: app_controller.cpp  app_controller.hpp  commands.cpp  commands.hpp
src/board/: board.cpp  board.hpp  board.natvis  file.hpp  print.cpp  print.hpp  rank.cpp  rank.hpp  square.cpp  square.hpp
src/command/: command.hpp  command_factory.cpp  command_factory.hpp
src/game/: castling_ability.hpp  commands.cpp  commands.hpp  game.natvis  game_players.cpp  game_players.hpp  move.cpp  move.hpp  pieces.cpp  pieces.hpp  player.cpp  player.hpp  print.cpp  print.hpp  win_conditions.cpp  win_conditions.hpp
src/grid/: coords.hpp  grid.hpp  grid.natvis  gridcell.hpp
src/input/: eval_input.cpp  eval_input.hpp  receive_player_command.cpp  receive_player_command.hpp
src/move_generator/: game_state.cpp  game_state.hpp  legal_moves.cpp  legal_moves.hpp  list_moves.cpp  list_moves.hpp  list_moves_detail.hpp  move_generator.cpp  move_generator.hpp  moves.cpp  moves.hpp  print.cpp  print.hpp
src/notation/: fen.cpp  fen.hpp  fen_detail.cpp  fen_detail.hpp
src/output/: console_writer.cpp  console_writer.hpp  player_side.cpp  player_side.hpp  print_board.cpp  print_board.hpp  print_game_over.cpp  print_game_over.hpp  print_move.cpp  print_move.hpp  print_piece.cpp  print_piece.hpp  print_square.cpp  print_square.hpp
src/perft/: perft.cpp  perft.hpp  perft_divide.cpp  perft_divide.hpp  print.cpp  print.hpp
tests/: CMakeLists.txt  ai_receive_ai_command.cpp  app_app_controller.cpp  app_commands.cpp  board_board.cpp  board_file.cpp  board_print.cpp  board_rank.cpp  board_square.cpp  command_command.cpp  game_castling_ability.cpp  game_game_players.cpp  game_move.cpp  game_pieces.cpp  game_player.cpp  game_print.cpp  game_win_conditions.cpp  grid_coords.cpp  grid_grid.cpp  grid_gridcell.cpp  input_eval_input.cpp  move_generator_game_state.cpp  move_generator_legal_moves.cpp  move_generator_list_moves.cpp  move_generator_move_generator.cpp  move_generator_moves.cpp  move_generator_print.cpp  notation_fen.cpp  output_player_side.cpp  output_print_board.cpp  output_print_game_over.cpp  output_print_move.cpp  output_print_piece.cpp  output_print_square.cpp  perft_perft.cpp  perft_perft_divide.cpp  perft_print.cpp
